generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// Store model - contains Shopify shop OAuth tokens
model Store {
  id            String              @id @default(uuid())
  userId        String // Reference to User in users-api (cross-service)
  name          String
  url           String
  shopifyDomain String              @unique
  language      String              @default("fr")
  status        String              @default("pending") // pending, connected, error
  accessToken   String? // Encrypted offline access token (permanent)
  nonce         String? // OAuth state nonce (temporary, cleared after callback)
  lastSyncedAt  DateTime?
  createdAt     DateTime            @default(now())
  updatedAt     DateTime            @updatedAt
  collections   ShopifyCollection[]
  products      ShopifyProduct[]
  settings      StoreSettings?

  @@index([userId])
  @@map("store")
}

// StoreSettings model - SEO generation parameters per store
model StoreSettings {
  id                  String   @id @default(uuid())
  storeId             String   @unique
  nicheKeyword        String   @default("")
  nicheDescription    String   @default("") @db.Text
  language            String   @default("fr")
  collectionWordCount Int      @default(800)
  productWordCount    Int      @default(400)
  customerPersona     String   @default("") @db.Text
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt
  store               Store    @relation(fields: [storeId], references: [id], onDelete: Cascade)

  @@index([storeId])
  @@map("store_settings")
}

// ShopifyCollection model - synced collections from Shopify
model ShopifyCollection {
  id               String   @id @default(cuid())
  shopifyGid       String // e.g., "gid://shopify/Collection/123"
  storeId          String
  title            String
  handle           String
  descriptionHtml  String?  @db.Text
  imageUrl         String?
  imageAlt         String?
  seoDescription   String?  @db.Text
  seoTitle         String?
  productsCount    Int      @default(0)
  shopifyUpdatedAt DateTime
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  store            Store    @relation(fields: [storeId], references: [id], onDelete: Cascade)

  @@unique([shopifyGid, storeId])
  @@index([storeId])
  @@map("shopify_collection")
}

// ShopifyProduct model - synced products from Shopify
model ShopifyProduct {
  id               String    @id @default(cuid())
  shopifyGid       String // Global ID GraphQL (ex: "gid://shopify/Product/123456")
  storeId          String
  title            String
  handle           String
  descriptionHtml  String?   @db.Text
  seoDescription   String?   @db.Text
  seoTitle         String?
  status           String // ACTIVE, DRAFT, ARCHIVED
  vendor           String?
  productType      String?
  tags             String[] // Array of tags
  price            Decimal   @db.Decimal(10, 2)
  compareAtPrice   Decimal?  @db.Decimal(10, 2)
  sku              String?
  imageUrl         String?
  imageAlt         String?
  collectionIds    String[] // Array of collection GIDs ["gid://shopify/Collection/1", ...]
  shopifyCreatedAt DateTime
  shopifyUpdatedAt DateTime
  publishedAt      DateTime?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  // Relations
  store Store @relation(fields: [storeId], references: [id], onDelete: Cascade)

  @@unique([shopifyGid, storeId])
  @@index([storeId])
  @@index([storeId, status]) // For filtering by status
  @@map("shopify_product")
}
